compilers/ID/cool/regression/BASE_cgtest/old_cool/redef_feature.cl.stderr
./BASE_cgtest/redef_feature.cl:19: In redefined method isNil, return type Bool is different from original return type Object.
./BASE_cgtest/redef_feature.cl:35: In redefined method isNil, return type Bool is different from original return type Object.
Class Main is not defined.
./BASE_cgtest/redef_feature.cl:10: Inferred return type Object of method car does not conform to declared return type Int.
./BASE_cgtest/redef_feature.cl:12: Inferred return type Object of method cdr does not conform to declared return type List.
Compilation halted due to static semantic errors.
